--- a/franske-course-information/modules/itc-2480/pages/lab1.adoc
+++ b/franske-course-information/modules/itc-2480/pages/lab1.adoc
@@ -60,7 +60,7 @@ TIP: The red line on this screen indicates the current time. If you want to get 
 .. The console shows the display of your VM and allows you to type and interact with your VM just as if you were physically sitting down in front of a server with a monitor, keyboard, and mouse attached. Think of a virtual machine console window as a window to a seaparte computer that you are able to see in your web browser. You can see the "virtual monitor" and interact with a keyboard and mouse but just like a separate physical machine you will not be able to copy and paste text or drag and drop files in and out of this console window. We will use other utilities across the network connection to do those things just like we would with a physical server.
 +
 --
-NOTE: There are some things special about physical access to a typical computer compared with network access. THese same things hold true for access to the console of a virtual machine compared with network acces to the virtual machine. In particular, you can observe the full boot process, work with the machine even if the network settings are incorrect or the system is disconnected from a network, and do things like enter "single user mode" or change GRUB boot settings for root account password recovery.
+NOTE: There are some things special about physical access to a typical computer compared with network access. These same things hold true for access to the console of a virtual machine compared with network acces to the virtual machine. In particular, you can observe the full boot process, work with the machine even if the network settings are incorrect or the system is disconnected from a network, and do things like enter "single user mode" or change GRUB boot settings for root account password recovery.
 --
 . Learn to "Power Cycle" your virtual machine
 .. By now your VM has likely already booted from it's virtual CD/DVD drive and should be at the "Debian GNU/Linux installer menu". Before continuing let's practice rebooting your system so you can watch the system boot and see how to reboot the system if needed. Click the down arrow button on the right side of the "Linux Server" tab at the top of your screen and choose "Power Off" then click the red "Power Off" button on the popup to power off your VM. This is the equivalent of just pulling out the power cord, at least until we install the VMware Tools software which allows for a graceful shutdown, so you'll want to be careful to only do this if absolutely needed until then.
@@ -89,7 +89,7 @@ image::lab01/007.png[Setting the domain name,250,align=left,link=self]
 --
 NOTE: We are protected by a firewall which you are getting through by being logged in to NetLab or in the future when you connect by VPN. In a situation where access to a Linux server is directly accessible over the Internet through SSH, SFTP, or similar it is *critical* that all passwords for all system users are strong passwords (or better yet you use SSH keys instead which we'll discuss in a future lab). Bad actors on the Internet are constantly scanning for systems they can try and access using password dictionaries and other attacks. If you use a simple password or have otherwise bad security on your system it will get compromised quite quickly.
 
-NOTE: If you forget your password it is possible to recover them because we have local console access to the system but that is not something covered in this course so you are on your own if that happens. The official method to get back into your system as far as this course is concerned is to format and reset your virtual machine and start over with a fresh installation. If you want to avoid this major annoyance it is very important that you do not forget or loose your passwords.
+NOTE: If you forget your passwords it is possible to recover them because we have local console access to the system but that is not something covered in this course so you are on your own if that happens. The official method to get back into your system as far as this course is concerned is to format and reset your virtual machine and start over with a fresh installation. If you want to avoid this major annoyance it is very important that you do not forget or loose your passwords.
 --
 ... Create a new user account by entering your name. The system will automatically use your first name (all lowercase) as the username and then you should set the password to another password you will not forget. It is strongly suggested you write down your username and password somewhere you can refer back to for future labs. We'll call this account your "standard user account" in future lab documentation to differentiate it from the root account.
 ... Select your timezone.
@@ -194,7 +194,7 @@ A faster way to interact with your system is not through the Netlab local consol
 
 NOTE: This section assumes you are continuing from above and your virtual machine has not been powered off since you checked the IP address. Because your virtual machine is currently using a DHCP address a power off could mean it has a different IP address. If you have powered off your virtual machine you will need to connect to the local console in Netlab, start it back up, and check the IP address again (see above).
 
-NOTE: This section assumes the computer you are working from (your administration PC) is a Windows based system. However, there are SSH tools available for all modern operating systems if you are using a Mac or Linux system. For the purposes of this course we'll be giving instructions for Windows administration PCs so if you are using a Mac or Linux administration PC you have two choices. You can either figure out the SSH and SFTP tools needed on your own or you can use a Windows administation PC as a virtual machine through Netlab.
+NOTE: This section assumes the computer you are working from (your administration PC) is a Windows based system. However, there are SSH tools available for all modern operating systems if you are using a Mac or Linux system. For the purposes of this course we'll be giving instructions for Windows administration PCs so if you are using a Mac or Linux administration PC you have two choices. You can either figure out the SSH and SFTP tools needed on your own or you can use a Windows administation PC as a virtual machine through Netlab by clicking on the "Admin PC" tab in Netlab. The password for the "Admin PC User" account is "Password123".
 
 NOTE: As mentioned earlier to keep things secure while you learn to setup a Linux server your Linux server is not directly accessible from the Internet. This means there is an extra step of connecting to the ITCnet Student VPN before attempting to access any devices on the 172.17.50.0/23 network (where your Linux server is). The only time this is not required is if your administration PC is already on the ITCnet network. For example you do not need to connect to the VPN if you are completing the lab from one of the ITC labs on campus and the computer you are using is plugged into an ITCnet connection or you are using the Windows administation PC as a virtual machine through Netlab. If one of these situations does not apply (such as if you are connecting directly from your home computer or from a laptop on the campus WiFi) you will need to connect to the VPN before opening an SSH session so that your system is on ITCnet.
 
