itc2480 complete lab 8

--- a/franske-course-information/modules/itc-2480/pages/lab3.adoc
+++ b/franske-course-information/modules/itc-2480/pages/lab3.adoc
@@ -408,7 +408,7 @@ jsmith@2480-Z:~/redteam$
 ====
 Most of what we learn in this course is applicable to any distribution of Linux. However, software packages are one area where each distribution of Linux has developed their own way of doing things, different tools, and different ways to store, access, and manage the packages. In this class we'll be focusing on the way Debian handles software packages and use Debian tools like *apt* and *dpkg* to work with *deb* packages. This is arguably the most popular packaging ecosystem as so many other distributions are based on Debian (Ubuntu, Mint, and many others). The other major packaging system is *RPM* based, developed by Red Hat using *yum* on Red Hat distributions, *DNF* on Fedora, and *YaST*/*zypper* on OpenSUSE. There are still other less popular systems such as *Portage*/*emerge* on Gentoo.
 ====
-. In case you haven't done it in a while a reminter that a good practice is to update your system package lists before installing any new packages, searching for packages, or trying to upgrade a package. Run the `apt update` command with administrative permissions and press enter to do this now.
+. In case you haven't done it in a while a reminder that a good practice is to update your system package lists before installing any new packages, searching for packages, or trying to upgrade a package. Run the `apt update` command with administrative permissions and press enter to do this now.
 . Just in case you need to unwind after a long lab session let's see if we can get a clone of the Tetris game installed which works from the command line.
 . We can search through the available packages for any that mention Tetris in the name or description with the `apt search _<search_term>_` command like `apt search tetris`. This will give you output something like this:
 +
